fix:improvement in feature page,banner,community section
Signed-off-by: Hermione Dadheech <hermionedadheech@gmail.com>

--- a/components/stub-generation/comm.css
+++ b/components/stub-generation/comm.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 300px;
+    padding:2em 0;
     position: relative;
 
   }
