--- a/app/(default)/webstories/css/styles.css
+++ b/app/(default)/webstories/css/styles.css
@@ -1,3 +1,8 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+
+/* Additional styles */
+
 @keyframes growAnimation {
   from {
     max-height: 50;
