--- a/app/(default)/webstories/css/styles.css
+++ b/app/(default)/webstories/css/styles.css
@@ -35,7 +35,7 @@
   top: 0;
   height: 100%;
   width: 0;
-  background: #E35134;
+  background: #FF914D;
   animation: 0.5s prog ease-in forwards;
 }
 
