--- a/app/(default)/webstories/css/styles.css
+++ b/app/(default)/webstories/css/styles.css
@@ -44,3 +44,41 @@
     width: 100%;
   }
 }
+
+.loaderBack {
+  display: block;
+  position: relative;
+  height: 4px;
+  width: 100%;
+  border-radius: 10px;
+  overflow: hidden; 
+}
+.loaderBack:after {
+  content: "";
+  position: absolute;
+  left: 0; /* Changed left: 0 to right: 0 */
+  top: 0;
+  height: 100%;
+  width: 100%; /* Changed width: 0 to width: 100% */
+  background: #FF914D;
+  animation: 0.2s progBack ease-out forwards; /* Changed ease-in to ease-out and animation name to progBack */
+}
+
+@keyframes progBack {
+  from { /* Changed from 0% to 100% and to 0% */
+    width: 100%;
+  }
+  to { /* Changed to 100% */
+    width: 0;
+  }
+}
+
+.lf-player-container{
+  display: flex;
+  /* background-color: #FF914D; */
+  height: 100%;
+}
+
+#lottie{
+  height: 100%;
+}
