--- a/app/css/style.css
+++ b/app/css/style.css
@@ -15,7 +15,12 @@
         direction: rtl;
     }
 }
-
+@font-face {
+    font-family: 'Pencil';
+    src: local('Pencil'), url(../../public/Poetirey-Regular.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
 .no-scrollbar {
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
