--- a/app/css/style.css
+++ b/app/css/style.css
@@ -36,57 +36,48 @@ button{
 /* Terminal's css */
 /* terminal.css */
 .terminal {
-    height: 20vh;
-    overflow-y: scroll;
-    background-color: #000000; /* Black background */
-    color: #ffffff; /* White text */
-    font-size: 14px;
-    line-height: 1.42;
-    font-family: "Menlo", "Monaco", "Consolas", "Courier New", Courier, monospace;
-    scrollbar-width: none; /* Hide scrollbar for Firefox */
-    -ms-overflow-style: none; /* Hide scrollbar for Internet Explorer and Edge */
-  }
-  
-  .terminal::-webkit-scrollbar {
-    display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
-  }
-  
-  .terminal__line {
-    line-height: 2;
-    white-space: pre-wrap;
-  }
-  
-  .terminal__prompt {
-    display: flex;
-    align-items: center;
-  }
-  
-  .terminal__prompt__label {
-    flex: 0 0 auto;
-    color: #00ff00; /* Green prompt label */
-  }
-  
-  .terminal__prompt__input {
-    flex: 1;
-    margin-left: 1rem;
-    display: flex;
-    align-items: center;
-    color: white;
-  }
-  
-  .terminal__prompt__input input {
-    flex: 1;
-    width: 100%;
-    background-color: transparent;
-    color: white;
-    border: 0;
-    outline: none;
-    font-size: 14px;
-    line-height: 1.42;
-    font-family: "Menlo", "Monaco", "Consolas", "Courier New", Courier, monospace;
-  }
-  
-  .terminal__prompt__input input::placeholder {
-    color: #00ff00; /* Green cursor style */
-  }
-  
+  height: 30vh; ;
+  overflow-y: scroll;
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+  background-color: #f3f3f3; /* Light background similar to VS Code light theme */
+  color: #333333; /* Dark text color */
+  font-size: 14px;
+  line-height: 1.42;
+  font-family: "IBM Plex Mono", Consolas, Menlo, Monaco, "Courier New", Courier, monospace;
+}
+
+.terminal__line {
+  line-height: 2;
+  white-space: pre-wrap; /* Wrap long lines */
+  word-wrap: break-word; /* Break long words */
+}
+
+.terminal__prompt {
+  display: flex;
+  align-items: center;
+}
+
+.terminal__prompt__label {
+  flex: 0 0 auto;
+  color: #007acc; /* Blue color similar to VS Code prompt */
+}
+
+.terminal__prompt__input {
+  flex: 1;
+  margin-left: 1rem;
+  display: flex;
+  align-items: center;
+  color: #333333; /* Dark text color */
+}
+
+.terminal__prompt__input input {
+  flex: 1;
+  width: 100%;
+  background-color: transparent;
+  color: #333333; /* Dark text color */
+  border: 0;
+  outline: none;
+  font-size: 14px;
+  line-height: 1.42;
+  font-family: "IBM Plex Mono", Consolas, Menlo, Monaco, "Courier New", Courier, monospace;
+}
