--- a/app/(default)/webstories/css/styles.css
+++ b/app/(default)/webstories/css/styles.css
@@ -74,3 +74,19 @@
 #lottie {
   height: 100%;
 }
+
+
+/* styles/loading.css */
+.loaderLoading {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
