--- a/app/css/style.css
+++ b/app/css/style.css
@@ -32,16 +32,15 @@
 button{
     cursor: pointer !important;
 }
-
 .terminal {
   height: 30vh;
   overflow-y: scroll; /* Enable vertical scrolling */
   overflow-x: scroll; /* Enable horizontal scrolling */
-  background-color: #f3f3f3; /* Light background similar to VS Code light theme */
-  color: #333333; /* Dark text color */
-  font-size: 14px;
+  background-color: #1e1e1e; /* Dark background */
+  color: #ffffff; /* Light text color */
+  font-size: 11pt; /* 11 point font size */
   line-height: 1.42;
-  /* font-family: "IBM Plex Mono", Consolas, Menlo, Monaco, "Courier New", Courier, monospace; */
+  font-family: "SF Mono", "IBM Plex Mono", Consolas, Menlo, Monaco, "Courier New", Courier, monospace;
   scrollbar-width: none; /* For Firefox to hide scrollbars */
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
 }
@@ -64,7 +63,7 @@ button{
 
 .terminal__prompt__label {
   flex: 0 0 auto;
-  color: #007acc; /* Blue color similar to VS Code prompt */
+  color: #ffffff; /* Blue color similar to VS Code prompt */
 }
 
 
@@ -82,16 +81,15 @@ button{
   display: none; /* Hide scrollbars */
 }
 
-
 @keyframes blink {
-  from, to {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
+  0% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 1; }
 }
 
+.animate-blink {
+  animation: blink 1s step-start infinite;
+}
 .MuiExpansionPanelSummary-expandIcon.Mui-expanded {
   transform: rotate(0deg);
 }
