--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,6 +1,9 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 /* Additional styles */
 @import 'additional-styles/utility-patterns.css';
 @import 'additional-styles/range-slider.css';
@@ -9,87 +12,148 @@
 
 @import 'tailwindcss/utilities';
 
-/* Additional Tailwind directives: https://tailwindcss.com/docs/functions-and-directives/#responsive */
-@layer utilities {
-    .rtl {
-        direction: rtl;
-    }
-}
 @font-face {
     font-family: 'Pencil';
     src: local('Pencil'), url(../../public/Poetirey-Regular.ttf) format('truetype');
     font-weight: normal;
     font-style: normal;
-  }
+}
+
 .no-scrollbar {
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
 }
+
 .no-scrollbar::-webkit-scrollbar {
     display: none;  /* Safari and Chrome */
 }
 
-button{
+button {
     cursor: pointer !important;
 }
+
 .terminal {
-  height: 30vh;
-  overflow-y: scroll; /* Enable vertical scrolling */
-  overflow-x: scroll; /* Enable horizontal scrolling */
-  background-color: #1e1e1e; /* Dark background */
-  color: #ffffff; /* Light text color */
-  font-size: 11pt; /* 11 point font size */
-  line-height: 1.42;
-  font-family: "SF Mono", "IBM Plex Mono", Consolas, Menlo, Monaco, "Courier New", Courier, monospace;
-  scrollbar-width: none; /* For Firefox to hide scrollbars */
-  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    height: 30vh;
+    overflow-y: scroll; /* Enable vertical scrolling */
+    overflow-x: scroll; /* Enable horizontal scrolling */
+    background-color: #1e1e1e; /* Dark background */
+    color: #ffffff; /* Light text color */
+    font-size: 11pt; /* 11 point font size */
+    line-height: 1.42;
+    scrollbar-width: none; /* For Firefox to hide scrollbars */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
 }
 
 .terminal__line {
-  line-height: 2;
-  white-space: pre-wrap; /* Wrap long lines */
-  word-wrap: break-word; /* Break long words */
+    line-height: 2;
+    white-space: pre-wrap; /* Wrap long lines */
+    word-wrap: break-word; /* Break long words */
 }
 
 .terminal__line input:focus {
-  outline: none; /* Remove the blue border */
-  border: none;
+    outline: none; /* Remove the blue border */
+    border: none;
 }
 
 .terminal__prompt {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .terminal__prompt__label {
-  flex: 0 0 auto;
-  color: #ffffff; /* Blue color similar to VS Code prompt */
+    flex: 0 0 auto;
+    color: #ffffff; /* Blue color similar to VS Code prompt */
+}
+
+.terminal_light {
+    height: 30vh;
+    overflow-y: scroll; /* Enable vertical scrolling */
+    overflow-x: scroll; /* Enable horizontal scrolling */
+    background-color: #f5f5f5; /* Light background */
+    color: #000000; /* Dark text color */
+    font-size: 11pt; /* 11 point font size */
+    line-height: 1.42;
+    scrollbar-width: none; /* For Firefox to hide scrollbars */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+.terminal__line_light {
+    line-height: 2;
+    white-space: pre-wrap; /* Wrap long lines */
+    word-wrap: break-word; /* Break long words */
+}
+
+.terminal__line_light input:focus {
+    outline: none; /* Remove the blue border */
+    border: none;
+}
+
+.terminal__prompt_light {
+    display: flex;
+    align-items: center;
+}
+
+.terminal__prompt__label_light {
+    flex: 0 0 auto;
+    color: #000000; /* Dark color for prompt label */
 }
 
 
 
 .block-class {
-  display: inline-block;
-  background-color: #007acc; /* Block color similar to VS Code prompt */
-  width: 10px;
-  height: 10px;
-  margin-left: 0.4rem;
+    display: inline-block;
+    background-color: #007acc; /* Block color similar to VS Code prompt */
+    width: 10px;
+    height: 10px;
+    margin-left: 0.4rem;
 }
 
 /* WebKit-based browsers */
 .terminal::-webkit-scrollbar {
-  display: none; /* Hide scrollbars */
+    display: none; /* Hide scrollbars */
 }
 
 @keyframes blink {
-  0% { opacity: 1; }
-  50% { opacity: 0; }
-  100% { opacity: 1; }
+    0% { opacity: 1; }
+    50% { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 .animate-blink {
-  animation: blink 1s step-start infinite;
+    animation: blink 1s step-start infinite;
 }
+
 .MuiExpansionPanelSummary-expandIcon.Mui-expanded {
-  transform: rotate(0deg);
+    transform: rotate(0deg);
+}
+
+/* Additional Tailwind directives: https://tailwindcss.com/docs/functions-and-directives/#responsive */
+@layer utilities {
+    .rtl {
+        direction: rtl;
+    }
+    
+    .courier-prime-regular {
+        font-family: "Courier Prime", monospace;
+        font-weight: 400;
+        font-style: normal;
+    }
+
+    .courier-prime-bold {
+        font-family: "Courier Prime", monospace;
+        font-weight: 700;
+        font-style: normal;
+    }
+
+    .courier-prime-regular-italic {
+        font-family: "Courier Prime", monospace;
+        font-weight: 400;
+        font-style: italic;
+    }
+
+    .courier-prime-bold-italic {
+        font-family: "Courier Prime", monospace;
+        font-weight: 700;
+        font-style: italic;
+    }
 }
