adding the atom one Dark theme
Signed-off-by: Aditya-eddy <aditya282003@gmail.com>

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -36,7 +36,7 @@ button {
     height: 30vh;
     overflow-y: scroll; /* Enable vertical scrolling */
     overflow-x: scroll; /* Enable horizontal scrolling */
-    background-color: #1e1e1e; /* Dark background */
+    background-color: #282c34; /* Dark background */
     color: #ffffff; /* Light text color */
     font-size: 9pt; /* 11 point font size */
     line-height: 1.42;
