--- a/components/community.css
+++ b/components/community.css
@@ -15,3 +15,11 @@
   margin: calc(-100px / 2);
   width: 250px;
 }
+@keyframes orbit {
+  0% {
+    transform: rotate(0deg) translate(300px) rotate(0deg); /* Adjust distance as needed */
+  }
+  100% {
+    transform: rotate(360deg) translate(300px) rotate(-360deg);
+  }
+}
