--- a/app/(default)/webstories/css/CircularLoader.module.css
+++ b/app/(default)/webstories/css/CircularLoader.module.css
@@ -15,13 +15,13 @@
   .backgroundCircle {
     fill: none;
     stroke: #e2a26d;
-    stroke-width: 10;
+    strokeWidth: 10;
   }
   
   .progressCircle {
     fill: none;
     stroke: #d84f06;
-    stroke-width: 10;
+    strokeWidth: 10;
     stroke-dasharray: 283; /* 2 * Math.PI * 45 (radius) */
     stroke-dashoffset: 283; /* Initially hidden */
     transition: stroke-dashoffset 0.3s linear;
