--- a/app/(default)/pricing/pricing.module.css
+++ b/app/(default)/pricing/pricing.module.css
@@ -1,4 +1,3 @@
-/* pricing.module.css */
 .header {
     background: linear-gradient(90deg, #f97316, #fb923c);
     color: white;
@@ -47,6 +46,7 @@
     font-size: 1rem;
     color: #6b7280;
     text-align: center;
+    margin-bottom: 5vh;
 }
 
 /* Slider Styling */
@@ -97,7 +97,6 @@
     transform: scale(1.2);
 }
 
-/* Button Styling */
 .button {
     background: linear-gradient(90deg, #f97316, #fb923c);
     color: white;
